--- a/site3.html
+++ b/site3.html
@@ -18,7 +18,7 @@
 
     <div class="buy">
         <h1>Available for purchase:</h1>
-        <p>Filter by:</p>
+        <p class="para">Filter by:</p>
         <select class="sortby">
             <option>Rating</option>
             <option>Supplier</option>
