--- a/site3.html
+++ b/site3.html
@@ -24,17 +24,17 @@
             <option>Supplier</option>
             <option>Price</option>
         </select><br><br>
-        <div class="item">
+        <div class="itema">
             <p>Item #1</p>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
             <button type="button" value="button">Add to cart.</button>
         </div><br>
-        <div class="item2">
+        <div class="item2a">
             <p>Item #2</p>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
             <button type="button" value="button">Add to cart.</button>
         </div>
-        <div class="item3">
+        <div class="item3a">
             <p>Item #3</p>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
             <button type="button" value="button">Add to cart.</button>
